# previewer-frontend

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  overview.md  protocol.md  reverse-engineering.md  roadmap.md
docs/adr/: 0001-two-component-host-ui-split.md  0002-portable-transport-and-gateway.md  0003-host-in-rust.md
host/: Cargo.toml  README.md
host/integrations/vscode/: .gitignore  .vscode-test.mjs  .vscodeignore  LICENSE  README.md  discover.js  extension.js  package-lock.json  package.json
host/integrations/vscode/scripts/: package-vsix-all.sh
host/integrations/vscode/test/suite/: e2e.test.js
host/integrations/vscode/test/unit/: discover.test.js  inspector.test.mjs
host/src/: main.rs
host/src/core/: command_bridge.rs  frame_relay.rs  launcher.rs  mod.rs  session.rs
host/src/gateway/: mod.rs  ws.rs
scripts/: compose-hms-previewer.sh  preview-and-debug.sh
ui/: README.md  __arkui_shot.html  index.html
ui/src/: app.js  arkui-inspector.js  hilog.js  style.css
ui/src/components/: ControlPanel.js  InputLayer.js  InspectorPanel.js  ScreenCanvas.js  Toolbar.js
ui/src/transport/: VsCodeTransport.js  WebSocketTransport.js  detect.js
