[package]
name = "previewer-host"
version = "0.0.0"
edition = "2021"
description = "OpenHarmony previewer 开源前端 Host：进程编排 + 双通道协议网关（驱动开源 Simulator 后端）"
license = "Apache-2.0"
publish = false

[[bin]]
name = "m0-probe"
path = "src/bin/m0_probe.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "time", "sync"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.6.11", features = ["fs", "cors"] }
bytes = "1.11.1"
